--- a/src/styles/diagram.webflow.css
+++ b/src/styles/diagram.webflow.css
@@ -42,7 +42,7 @@ body {
 
 .heading {
   font-family: 'Changa One', Impact, sans-serif;
-  color: #00897b;
+  color: #0D646B;
   font-size: 30px;
   font-weight: 500;
   text-align: center;
@@ -85,11 +85,11 @@ body {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  border-style: solid;
+  /*border-style: solid;
   border-width: 1px;
   border-color: hsla(0, 0%, 100%, 0.03);
   background-color: rgba(0, 0, 0, 0.28);
-  box-shadow: 0 -1px 5px 0 #171717;
+  box-shadow: 0 -1px 5px 0 #171717;*/
   color: hsla(0, 0%, 100%, 0.56);
 }
 
@@ -348,8 +348,8 @@ body {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  margin-top: 2px;
-  padding: 2px 6px;
+  margin-top: 1px;
+  padding: 1px 6px;
   -webkit-box-align: center;
   -webkit-align-items: center;
   -ms-flex-align: center;
@@ -358,7 +358,7 @@ body {
   border-left: 1px solid #1d1b1b;
   border-radius: 5px;
   background-color: rgba(0, 0, 0, 0.5);
-  color: #00897b;
+  color: #C75E24;
   font-size: 12px;
   font-style: normal;
   font-weight: 600;
